[package]
name = "retz"
version = "0.1.1"
edition = "2021"
authors = ["Taneli Kaivola <tanelikaivola@users.noreply.github.com>"]
license-file = "LICENSE"
description = "Command-line tool to convert timestamps to other timezones"
repository = "https://github.com/tanelikaivola/retz"
keywords = ["timezone"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.37"
chrono-tz = "0.9.0"
clap = { version = "4.5.4", default-features = false, features = ["derive", "cargo", "error-context", "help", "std", "suggestions", "usage"] }
eyre = "0.6.12"

[lints.rust]
unsafe_code = "forbid"

